# dali-demo

./: .gitignore  CMakeLists.txt  README  README.md  com.samsung.dali-demo-vk.rule  com.samsung.dali-demo-vk.xml  com.samsung.dali-demo.manifest-smack  com.samsung.dali-demo.xml  dali-demo.vcxproj.filters  prebuild.bat  setenv.bat
android/native-demo/: build.gradle
android/native-demo/app/src/main/cpp/: CMakeLists.txt  main.cpp
builder/: dali-builder.cpp
controls/: dali-demo-controls-common.h  file.list
controls/alignment/: alignment-impl.cpp  alignment-impl.h  alignment.cpp  alignment.h
controls/bloom-view/: bloom-view-impl.cpp  bloom-view-impl.h  bloom-view.cpp  bloom-view.h
controls/bubble-effect/: bubble-effect.h  bubble-emitter-impl.cpp  bubble-emitter-impl.h  bubble-emitter.cpp  bubble-emitter.h  bubble-renderer.cpp  bubble-renderer.h  color-adjuster.h
controls/effects-view/: effects-view-impl.cpp  effects-view-impl.h  effects-view.cpp  effects-view.h
controls/filters/: blur-two-pass-filter.cpp  blur-two-pass-filter.h  emboss-filter.cpp  emboss-filter.h  image-filter.cpp  image-filter.h  spread-filter.cpp  spread-filter.h
controls/magnifier/: magnifier-impl.cpp  magnifier-impl.h  magnifier.cpp  magnifier.h
controls/navigation-view/: navigation-view-impl.cpp  navigation-view-impl.h  navigation-view.cpp  navigation-view.h
controls/page-turn-view/: page-factory.h  page-turn-book-spine-effect.h  page-turn-effect-frag.h  page-turn-effect-vert.h  page-turn-effect.cpp  page-turn-effect.h  page-turn-landscape-view-impl.cpp  page-turn-landscape-view-impl.h  page-turn-landscape-view.cpp  page-turn-landscape-view.h  page-turn-portrait-view-impl.cpp  page-turn-portrait-view-impl.h  page-turn-portrait-view.cpp  page-turn-portrait-view.h  page-turn-view-impl.cpp  page-turn-view-impl.h  page-turn-view.cpp  page-turn-view.h
controls/popup/: confirmation-popup-impl.cpp  confirmation-popup-impl.h  confirmation-popup.cpp  confirmation-popup.h  popup-impl.cpp  popup-impl.h  popup.cpp  popup.h
controls/progress-bar/: progress-bar-impl.cpp  progress-bar-impl.h  progress-bar.cpp  progress-bar.h
controls/shaders/: bloom-view-composite-shader-frag.h  bloom-view-extract-shader-frag.h  blur-two-images-shader-frag.h  blur-two-pass-shader-frag.h  bubble-effect-color-adjuster-frag.h  bubble-effect-frag.h  bubble-effect-vert.h  bubble-emitter-frag.h  bubble-emitter-vert.h  control-renderers-frag.h  control-renderers-vert.h  cube-transition-effect-frag.h  cube-transition-effect-vert.h  effects-view-frag.h  effects-view-vert.h  emboss-filter-composite-shader-frag.h  emboss-filter-shader-frag.h  page-turn-book-spine-effect-frag.h  page-turn-book-spine-effect-vert.h  shadow-view-render-shader-frag.h  shadow-view-render-shader-vert.h  spread-filter-shader-frag.h  super-blur-view-frag.h
controls/shadow-view/: shadow-view-impl.cpp  shadow-view-impl.h  shadow-view.cpp  shadow-view.h
controls/slider/: slider-impl.cpp  slider-impl.h  slider.cpp  slider.h
controls/super-blur-view/: super-blur-view-impl.cpp  super-blur-view-impl.h  super-blur-view.cpp  super-blur-view.h
controls/tool-bar/: tool-bar-impl.cpp  tool-bar-impl.h  tool-bar.cpp  tool-bar.h
controls/transition-effects/: cube-transition-cross-effect-impl.cpp  cube-transition-cross-effect-impl.h  cube-transition-cross-effect.cpp  cube-transition-cross-effect.h  cube-transition-effect-impl.cpp  cube-transition-effect-impl.h  cube-transition-effect.cpp  cube-transition-effect.h  cube-transition-fold-effect-impl.cpp  cube-transition-fold-effect-impl.h  cube-transition-fold-effect.cpp  cube-transition-fold-effect.h  cube-transition-wave-effect-impl.cpp  cube-transition-wave-effect-impl.h  cube-transition-wave-effect.cpp  cube-transition-wave-effect.h
demo/: dali-demo.cpp  dali-table-view.cpp  dali-table-view.h  file.list
demo/po/: as.po  de.po  en_GB.po  es.po  ml.po  zn_CH.po
demo/scripts/: animation.json  background-color.json  button.json  contacts.json  hello-world.json  music-library.json  super-blur-view.json  table-view.json  timing.json
emscripten-examples/: dali-doc-demo.html  dali-toy.html  dali-toy.js  install.sh
examples-reel/: dali-examples-reel.cpp
examples/advanced-blend-mode/: advanced-blend-mode-example.cpp
examples/alpha-blending-cpu/: alpha-blending-cpu-example.cpp
examples/animated-gradient-call-active/: animated-gradient-call-active.cpp
examples/animated-gradient-card-active/: animated-gradient-card-active.cpp
examples/animated-images/: animated-images-example.cpp
examples/animated-shapes/: animated-shapes-example.cpp
examples/animated-vector-images/: animated-vector-images-example.cpp
examples/animated-vector-images-rive/: animated-vector-images-rive-example.cpp
examples/arc-visual/: arc-visual-example.cpp
examples/atlas/: atlas-example.cpp
examples/benchmark/: benchmark.cpp
examples/benchmark-2dphysics/: README.md  benchmark-2d-physics-controller.cpp  dependencies.cmake
examples/benchmark-color/: README.md  benchmark-color.cpp
examples/bezier-curve/: bezier-curve-example.cpp
examples/blocks/: blocks-example.cpp
examples/bloom-view/: bloom-view-example.cpp
examples/blur-noise/: README.md  blur-noise-example.cpp
examples/bubble-effect/: bubble-effect-example.cpp
examples/builder/: dali-builder.cpp  dependencies.cmake  examples.cpp
examples/bullet-physics/: README.md  ball-renderer.cpp  ball-renderer.h  cube-renderer.cpp  cube-renderer.h  dependencies.cmake  physics-demo-controller.cpp
examples/buttons/: buttons-example.cpp
examples/camera-test/: camera-test-example.cpp
examples/cluster/: cluster-impl.cpp  (+8 more)
main/: main-example.cpp
packaging/: com.samsung.dali-demo-vk.spec  com.samsung.dali-demo.spec
shared/: bubble-animator.cpp  bubble-animator.h  dali-demo-strings.h  dali-table-view.cpp  dali-table-view.h  example.h  execute-process-android.cpp  execute-process-tizen.cpp  execute-process-unix.cpp  execute-process-win.cpp  execute-process.h  file-wrapper.cpp  file-wrapper.h  multi-language-strings.h  utility.h  view.h
tests-reel/: dali-tests-reel.cpp
(+619 files in other folders)
